# dicey

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  __init__.py  dice.py  die_roll_result.py  die_roller.py  pyproject.toml  setup.py
dicey/: __init__.py  __main__.py  dicey.lark  dieparser.py  dietransformer.py  new.py  result.py  roller.py
tests/: test_dieparser.py  test_roller.py
